maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:14: error: not found: value keeHandOnSideWall
      sommeDesVirages += keeHandOnSideWall()
                         ^Escaper:35: error: type mismatch;
 found   : Unit
 required: Int
  if (murGauche && !estFaceMur())
  ^